# strmdck

./: pyproject.toml
.github/workflows/: publish.yml
src/strmdck/: device.py  device_manager.py  utils.py
src/strmdck/devices/: ulanzi_d200.py
